# PortfolioOS

./: .gitignore  AGENTS.md  Makefile  README.md  ROADMAP.md  RUNBOOK.md  TASK_MEMORY.md  VALIDATION.md  pyproject.toml
config/: default.yaml  us_default.yaml  us_expanded.yaml  us_expanded_aggressive.yaml  us_expanded_alpha_phase_1_5.yaml  us_expanded_tca_calibrated.yaml  us_expanded_tca_calibrated_replace.yaml  us_expanded_tca_directional.yaml
configs/: research_freeze_before_portfolio_quant.yaml  research_tracks.yaml  sue_announcement_timestamp_policy.yaml  sue_coverage_linkage_price_diagnostics.yaml  sue_event_timing_anchor_audit.yaml  sue_historical_event_evidence_grid.yaml  sue_placebo_failure_attribution.yaml  sue_regime_filter_placebo_check.yaml  sue_score_definition_diagnostics.yaml  sue_score_definition_gate.yaml  sue_timestamp_enrichment.yaml  wrds_sue_crsp_price_extract.yaml  wrds_sue_event_panel_expanded.yaml  wrds_sue_event_panel_full.yaml  wrds_sue_linkage_rescue.yaml  wrds_sue_timestamp_sources.yaml
docs/: approval.md  ashare_a5_closeout_and_phase3_kickoff_note.md  audit.md  calibration_profiles.md  constraints.md  cost_model_decision_note.md  cost_penalty_sweep_note.md  data_builders.md  demo_script.md  engineering_workflow.md  execution_ab_experiment.md  execution_mode_decision_note.md  execution_simulation.md  import_profiles.md  math.md  paper_calibration_drift_note_template.md  paper_calibration_live_2026_04_15.md  paper_calibration_runbook.md  phase_1_5_alpha_decision_note.md  phase_1_alpha_closeout_note.md  pilot_operations_plan.md  pilot_runbook.md  platform_ml_rl_roadmap.md  project_freeze_paper_only_2026_04_08.md  providers.md  research_promotion_contract.md  snapshot_bundle.md
notebooks/: 01_data_exploration.ipynb  02_cost_model_fit.ipynb  03_rebalance_demo.ipynb  04_constraint_demo.ipynb
reports/: alpha_registry_report.md  demo_audit_report.md  factor_formula_mechanism_v2_audit.md  (+27 more)
(+1026 files in other folders)
